--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz-App NOW</title>
+    <title>Welcome Page</title>
     <link rel="stylesheet" href="app.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-column text-center justify-center flex-center">
-            <h1><h1>The fastest way to learn :)</h1></h1>
-            <a class="btn" href="/highscores.html">Highscores</a>
-            <a class="btn" href="/game.html">Play</a>
+            <div class="wrap">
+                <form id="login">
+                    <h1>QUIZ NOW!</h1>
+                    <div class="div">
+                        <label for="usrname">Name</label>
+                        <input class="" type="text" name="username" id="usrname">
+                    </div>
+                        <input id="btn-enter" class="btn enter" type="button" value="Enter" onclick="Redirect();">
+                </form>
+            </div>
         </div>
     </div>
+    
 </body>
 <script src="app.js"></script>
+<script src="end.js"></script>
 </html>
